infrastructure/headlamp/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: headlamp-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-http01-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - headlamp.mbtux.com
      secretName: headlamp-tls
  rules:
    - host: headlamp.mbtux.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
